fixed img z-index at exportCard img

--- a/src/components/ExportCard/ExportCard.module.scss
+++ b/src/components/ExportCard/ExportCard.module.scss
@@ -51,11 +51,17 @@
 
             background-color: #fff;
 
+            .exportCardBackBody {
+                position: absolute;
+                top: 0;
+                z-index: 1;
+            }
+
             .exportCardBackImg {
                 position: absolute;
                 top: 0;
                 left: 0;
-                z-index: -1;
+                z-index: 0;
             }
 
             .exportCardBackTextRecipient {
